<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/menu_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="359dp"
        android:layout_height="215dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cadastrarProdButton"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="#673AB7"
                android:text="@string/cadastrar_prod_btn" />

            <Button
                android:id="@+id/listarProdButton"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="#673AB7"
                android:text="@string/listar_prod_btn" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/alterarProdButton"
                android:layout_width="155dp"
                android:layout_height="61dp"
                android:layout_margin="10dp"
                android:background="#673AB7"
                android:text="@string/alterar_prod_btn" />

            <Button
                android:id="@+id/deletarProdButton"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="#673AB7"
                android:text="@string/deletar_prod_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="94dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#FF5722"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="#F1EEEE"
            android:textSize="34sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>