<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroClienteActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#FF5722"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="#F1EEEE"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.29">

        <TextView
            android:id="@+id/codigoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo_cliente"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/codigoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/nomeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_cliente"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_cliente"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/sexoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo_cliente"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_masculino" />

            <RadioButton
                android:id="@+id/radioFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_feminino" />
        </RadioGroup>

        <TextView
            android:id="@+id/selecaoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecionar_evento"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageRockInRio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                tools:srcCompat="@drawable/rockinrio" />

            <CheckBox
                android:id="@+id/cbRockInRio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rock In Rio   " />

            <ImageView
                android:id="@+id/imageTheTown"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:srcCompat="@drawable/thetown" />

            <CheckBox
                android:id="@+id/cbTheTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The Town" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageLolla"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                tools:srcCompat="@drawable/lolla" />

            <CheckBox
                android:id="@+id/cbLolla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lollapalooza" />

            <ImageView
                android:id="@+id/imageCarnatal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:srcCompat="@drawable/carnatal" />

            <CheckBox
                android:id="@+id/cbCarnatal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carnatal" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="74dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.923">

        <Button
            android:id="@+id/salvarBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:text="@string/salvar_btn" />

        <Button
            android:id="@+id/limparBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:text="@string/limpar_btn" />

        <Button
            android:id="@+id/voltarBtnCadastro"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:text="@string/voltar_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>