<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="85dp"
        android:layout_marginBottom="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/entrarButton"
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#673AB7"
            android:shadowColor="#673AB7"
            android:text="@string/entrarButton"
            android:textColor="#FFFFFF"
            android:textColorHint="#673AB7"
            android:textColorLink="#673AB7"
            android:textSize="20sp"
            app:rippleColor="#673AB7"
            app:strokeColor="#673AB7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="424dp"
        android:layout_height="292dp"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginText"
            android:layout_width="223dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/senhaView"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/senha"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/senhaText"
            android:layout_width="221dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="752dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#FF5722"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="#F1EEEE"
            android:textSize="34sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>